/*
  Customer Offer

  This service domain orchestrates the processing of a product offer for a new or established &nbsp;customer. The offer process is defined specifically for the product or service being considered and can include actions such as document checks, collateral allocation, credit assessments, underwriting decisions, regulatory and procedural checks, eligibility checks, the use of internal and external specialist services (such as evaluations and legal advice).

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.customeroffer.v10.api.crcustomerofferprocedureservice;

import "google/protobuf/empty.proto";
import public "v10/model/customer_offer_procedure.proto";
import public "v10/model/execute_customer_offer_procedure_request.proto";
import public "v10/model/execute_customer_offer_procedure_response.proto";
import public "v10/model/http_error.proto";
import public "v10/model/initiate_customer_offer_procedure_request.proto";
import public "v10/model/initiate_customer_offer_procedure_response.proto";
import public "v10/model/request_customer_offer_procedure_request.proto";
import public "v10/model/request_customer_offer_procedure_response.proto";

service CRCustomerOfferProcedureService {
  rpc Execute (ExecuteRequest) returns (ExecuteCustomerOfferProcedureResponse);

  rpc Initiate (InitiateRequest) returns (InitiateCustomerOfferProcedureResponse);

  rpc Request (RequestRequest) returns (RequestCustomerOfferProcedureResponse);

  rpc Retrieve (RetrieveRequest) returns (CustomerOfferProcedure);

  rpc Update (UpdateRequest) returns (CustomerOfferProcedure);

}

message ExecuteRequest {
  string customerofferId = 1;
  ExecuteCustomerOfferProcedureRequest executeCustomerOfferProcedureRequest = 2;

}

message InitiateRequest {
  InitiateCustomerOfferProcedureRequest initiateCustomerOfferProcedureRequest = 1;

}

message RequestRequest {
  string customerofferId = 1;
  RequestCustomerOfferProcedureRequest requestCustomerOfferProcedureRequest = 2;

}

message RetrieveRequest {
  string customerofferId = 1;

}

message UpdateRequest {
  string customerofferId = 1;
  CustomerOfferProcedure customerOfferProcedure = 2;

}

